recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: '{' expected but 'case' found.
case 0 => avance(length)
^Tree:5: error: '}' expected but 'case' found.
case _ => avance(length)
^Tree:15: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:29: error: expected start of definition
	override def run() {
                 ^Tree:33: error: eof expected but '}' found.
}
^